# skyMask

./: .gitignore  README.md  pyproject.toml  requirements.txt
skyMask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
skyMaskCLI/: cli_main.py
skyMaskMain/: mask_main.py  rich_utils.py  utils_mask.py
